Updated the Old English translation.

--- a/po/wesnoth-dw/ang@latin.po
+++ b/po/wesnoth-dw/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-02-17 13:40-0500\n"
+"PO-Revision-Date: 2012-05-14 23:57-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -700,10 +700,11 @@ msgstr ""
 msgid "Onward to Tyegëa’s island, then."
 msgstr ""
 
+# Espreon sayeth: perhaps "Ƿulfa Stæþ" or something like that would be better...
 #. [scenario]: id=03_Wolf_Coast
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:13
 msgid "Wolf Coast"
-msgstr ""
+msgstr "Ƿulfstæþ"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:20
@@ -732,8 +733,9 @@ msgstr ""
 
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:144
+#, fuzzy
 msgid "Wild Wolves"
-msgstr ""
+msgstr "Ƿilde Ƿulfas"
 
 #. [unit]: type=Goblin Knight, id=Vrunt
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:195
@@ -1171,7 +1173,7 @@ msgstr ""
 #. [side]: id=Marg-Tonz, type=Orcish Sovereign
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:130
 msgid "Orcs"
-msgstr ""
+msgstr "Orcƿihta"
 
 #. [side]: id=Marg-Tonz, type=Orcish Sovereign
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:134
@@ -1181,7 +1183,7 @@ msgstr ""
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:159
 msgid "Undead"
-msgstr ""
+msgstr "Undeade"
 
 #. [message]: speaker=ghost scout
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:251
@@ -2081,7 +2083,7 @@ msgstr ""
 #. [unit]: type=Outlaw, id=Howyrth
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:403
 msgid "Howyrth"
-msgstr "Hoƿyrþ"
+msgstr ""
 
 #. [message]: speaker=Howyrth
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:417
