--- a/po/wesnoth-manual/ang@latin.po
+++ b/po/wesnoth-manual/ang@latin.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-03-31 10:44+0300\n"
-"PO-Revision-Date: 2012-03-31 23:11-0500\n"
+"POT-Creation-Date: 2012-05-18 11:12+0300\n"
+"PO-Revision-Date: 2012-05-17 09:20-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -206,7 +206,7 @@ msgstr ""
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2331
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2347
 msgid "<placeholder type=\"inlinemediaobject\" id=\"0\"/>"
-msgstr ""
+msgstr "<placeholder type=\"inlinemediaobject\" id=\"0\"/>"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:98
@@ -292,8 +292,9 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:177
+#, fuzzy
 msgid "Map Editor"
-msgstr ""
+msgstr "Landcartan Adihtend"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:181
@@ -364,7 +365,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:245
 msgid "Next"
-msgstr ""
+msgstr "Niehst"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:249
@@ -1184,7 +1185,7 @@ msgstr "Ctrl+n"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:865
 msgid "Rename unit"
-msgstr ""
+msgstr "Ƿihta eftnemnan"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:870
@@ -1291,9 +1292,8 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:968
-#, fuzzy
 msgid "Shift+Space"
-msgstr "Shift+c"
+msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:971
@@ -1302,9 +1302,8 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:976
-#, fuzzy
 msgid "Ctrl+Space"
-msgstr "Ctrl+e"
+msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:979
@@ -1719,7 +1718,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1363
 msgid "Units"
-msgstr ""
+msgstr "Ƿihta"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1364
@@ -1819,11 +1818,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-dawn.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-dawn.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1429
 msgid "images/schedule-dawn.png"
-msgstr ""
+msgstr "images/schedule-dawn.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1433
@@ -1853,11 +1854,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-morning.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-morning.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1454
 msgid "images/schedule-morning.png"
-msgstr ""
+msgstr "images/schedule-morning.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1458
@@ -1900,11 +1903,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-afternoon.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-afternoon.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1479
 msgid "images/schedule-afternoon.png"
-msgstr ""
+msgstr "images/schedule-afternoon.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1483
@@ -1925,11 +1930,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-dusk.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-dusk.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1504
 msgid "images/schedule-dusk.png"
-msgstr ""
+msgstr "images/schedule-dusk.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1508
@@ -1949,16 +1956,18 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-firstwatch.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-firstwatch.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1529
 msgid "images/schedule-firstwatch.png"
-msgstr ""
+msgstr "images/schedule-firstwatch.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1533
 msgid "Night (first watch)"
-msgstr ""
+msgstr "Niht (forme ƿæcc)"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1547
@@ -1973,16 +1982,18 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-secondwatch.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-secondwatch.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1554
 msgid "images/schedule-secondwatch.png"
-msgstr ""
+msgstr "images/schedule-secondwatch.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1558
 msgid "Night (second watch)"
-msgstr ""
+msgstr "Niht (oðru ƿæcc)"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1572
@@ -1995,11 +2006,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-underground.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-underground.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1579
 msgid "images/schedule-underground.png"
-msgstr ""
+msgstr "images/schedule-underground.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1583
@@ -2125,7 +2138,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1684
 msgid "Dextrous"
-msgstr ""
+msgstr "Manigteaƿ"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1688
@@ -2192,7 +2205,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1745
 msgid "Undead"
-msgstr ""
+msgstr "Undead"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1749
@@ -2356,7 +2369,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1891
 msgid "Petrify"
-msgstr ""
+msgstr "Forstanian"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1895
@@ -2753,6 +2766,7 @@ msgstr "Grene"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2287
@@ -2775,6 +2789,7 @@ msgstr "Geolu"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2303
@@ -2799,6 +2814,7 @@ msgstr "Read"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2319
@@ -2823,6 +2839,7 @@ msgstr "Blaƿ"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2335
@@ -2839,6 +2856,7 @@ msgstr ""
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2351
@@ -3670,78 +3688,3 @@ msgid ""
 "Advanced units have higher upkeep than lower level units (1 gp per level), "
 "loyal units are an exception."
 msgstr ""
-
-#~ msgid "Ctrl-s"
-#~ msgstr "Ctrl-s"
-
-#~ msgid "Ctrl-o"
-#~ msgstr "Ctrl-o"
-
-#~ msgid "Ctrl-p"
-#~ msgstr "Ctrl-p"
-
-#~ msgid "Ctrl-q"
-#~ msgstr "Ctrl-q"
-
-#~ msgid "Ctrl-f"
-#~ msgstr "Ctrl-f"
-
-#~ msgid "Ctrl-g"
-#~ msgstr "Ctrl-g"
-
-#~ msgid "Ctrl-a"
-#~ msgstr "Ctrl-a"
-
-#~ msgid "Ctrl-j"
-#~ msgstr "Ctrl-j"
-
-#~ msgid "Alt-s"
-#~ msgstr "Alt-s"
-
-#~ msgid "Alt-u"
-#~ msgstr "Alt-u"
-
-#~ msgid "Shift-s"
-#~ msgstr "Shift-s"
-
-#~ msgid "Ctrl-r"
-#~ msgstr "Ctrl-r"
-
-#~ msgid "Alt-r"
-#~ msgstr "Alt-r"
-
-#~ msgid "Ctrl-n"
-#~ msgstr "Ctrl-n"
-
-#~ msgid "Shift-n"
-#~ msgstr "Shift-n"
-
-#~ msgid "Ctrl-v"
-#~ msgstr "Ctrl-v"
-
-#~ msgid "Ctrl-b"
-#~ msgstr "Ctrl-b"
-
-#~ msgid "Ctrl-m"
-#~ msgstr "Ctrl-m"
-
-#~ msgid "Alt-m"
-#~ msgstr "Alt-m"
-
-#~ msgid "Alt-c"
-#~ msgstr "Alt-c"
-
-#~ msgid "Ctrl-c"
-#~ msgstr "Ctrl-c"
-
-#~ msgid "Alt-l"
-#~ msgstr "Alt-l"
-
-#~ msgid "Ctrl-l"
-#~ msgstr "Ctrl-l"
-
-#~ msgid "Cmd-w"
-#~ msgstr "Cmd-w"
-
-#~ msgid "Cmd-,"
-#~ msgstr "Cmd-,"
