--- a/po/wesnoth/ang@latin.po
+++ b/po/wesnoth/ang@latin.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-05-18 11:13+0200\n"
-"PO-Revision-Date: 2012-03-12 01:27-0500\n"
+"PO-Revision-Date: 2012-05-17 12:13-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -352,7 +352,7 @@ msgstr "Cinisc (Taiƿan) Geþeodnes"
 #. [about]
 #: data/core/about.cfg:1417
 msgid "Croatian Translation"
-msgstr ""
+msgstr "Croatisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1424
@@ -383,8 +383,9 @@ msgstr "Niƿe Englisc (on Scaƿes stæfrofe) Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1625
+#, fuzzy
 msgid "Esperanto Translation"
-msgstr ""
+msgstr "Esperantisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1644
@@ -733,8 +734,9 @@ msgstr ""
 #. [then]
 #: data/core/macros/ai_controller.cfg:591
 #: data/core/macros/ai_controller.cfg:602
+#, fuzzy
 msgid "none set."
-msgstr ""
+msgstr "nane gesett."
 
 #. [do]
 #: data/core/macros/ai_controller.cfg:644
@@ -1544,8 +1546,9 @@ msgstr ""
 
 #. [note]: description=<b>
 #: data/core/macros/objective-utils.cfg:74
+#, fuzzy
 msgid "This is the last scenario."
-msgstr ""
+msgstr "Þes is se latost capitol."
 
 #. [message]: speaker=narrator
 #: data/core/macros/scenario-utils.cfg:62
@@ -2429,19 +2432,21 @@ msgstr "geætredu"
 
 #: data/lua/wml-tags.lua:826 src/actions.cpp:1497
 msgid "female^slowed"
-msgstr "geaslæƿedu"
+msgstr "geforslæƿedu"
 
 #: data/lua/wml-tags.lua:826 src/actions.cpp:1497
 msgid "slowed"
-msgstr "geaslæƿed"
+msgstr "geforslæƿed"
 
 #: data/lua/wml-tags.lua:827 src/actions.cpp:1502
+#, fuzzy
 msgid "female^petrified"
-msgstr ""
+msgstr "forstanodu"
 
 #: data/lua/wml-tags.lua:827 src/actions.cpp:1502
+#, fuzzy
 msgid "petrified"
-msgstr ""
+msgstr "forstanod"
 
 #: data/lua/wml-tags.lua:828
 msgid "female^unhealable"
@@ -2527,8 +2532,9 @@ msgstr ""
 #. [menu]: id=button-endturn
 #: data/themes/default.cfg:156 data/themes/dfool.cfg:167
 #: data/themes/widescreen.cfg:188
+#, fuzzy
 msgid "End Scenario"
-msgstr ""
+msgstr "Capitol Endian"
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]: id=label-hp
@@ -2566,7 +2572,7 @@ msgstr "þorpas"
 #: data/themes/default.cfg:251 data/themes/dfool.cfg:285
 #: data/themes/experimental.cfg:224 data/themes/widescreen.cfg:303
 msgid "units"
-msgstr ""
+msgstr "ƿihta"
 
 #. [label]: id=upkeep-icon
 #: data/themes/default.cfg:260 data/themes/dfool.cfg:294
@@ -2675,8 +2681,9 @@ msgstr ""
 
 #: src/about.cpp:208 src/menu_events.cpp:325 src/menu_events.cpp:352
 #: src/statistics_dialog.cpp:114
+#, fuzzy
 msgid "Close"
-msgstr ""
+msgstr "Tynan"
 
 #: src/actions.cpp:501
 msgid "You don’t have a leader to recall with."
@@ -2723,10 +2730,11 @@ msgid "Failed teleport! Exit not empty"
 msgstr ""
 
 #: src/actions.cpp:2771
+#, fuzzy
 msgid "Friendly unit sighted"
 msgid_plural "$friends friendly units sighted"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Freondlice ƿihte geseƿen"
+msgstr[1] "$friends freondlica ƿihta geseƿen"
 
 #: src/actions.cpp:2774
 msgid "Enemy unit sighted!"
@@ -2764,7 +2772,7 @@ msgstr "Fyrd"
 
 #: src/addon/manager.cpp:442
 msgid "addon_type^Scenario"
-msgstr ""
+msgstr "Capitol"
 
 #: src/addon/manager.cpp:444
 msgid "addon_type^MP era"
@@ -2861,7 +2869,7 @@ msgstr ""
 #: src/addon/manager.cpp:749 src/addon/manager.cpp:935
 #: src/addon/manager.cpp:1164
 msgid "Author"
-msgstr ""
+msgstr "Frumƿyrhta"
 
 #: src/addon/manager.cpp:749 src/addon/manager.cpp:935
 #: src/addon/manager.cpp:1164
@@ -3122,7 +3130,7 @@ msgstr ""
 
 #: src/attack_prediction_display.cpp:249
 msgid "Slowed"
-msgstr "Geaslæƿed"
+msgstr "Geforslæƿed"
 
 #: src/attack_prediction_display.cpp:254 src/reports.cpp:802
 msgid "Total damage"
@@ -3394,11 +3402,11 @@ msgstr ""
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:274 src/multiplayer_lobby.cpp:520
 msgid "Unknown scenario: $scenario_id"
-msgstr ""
+msgstr "Uncuþ capitol: $scenario_id"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:279 src/multiplayer_lobby.cpp:524
 msgid "Unknown scenario"
-msgstr ""
+msgstr "Uncuþ capitol"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:285 src/multiplayer_lobby.cpp:529
 msgid "Reloaded game"
@@ -3636,7 +3644,7 @@ msgstr "Þorpas"
 
 #: src/menu_events.cpp:381
 msgid "status^Units"
-msgstr ""
+msgstr "Ƿihta"
 
 #: src/menu_events.cpp:382
 msgid "Upkeep"
@@ -3748,8 +3756,9 @@ msgid "Recruit"
 msgstr ""
 
 #: src/menu_events.cpp:744 src/menu_events.cpp:949
+#, fuzzy
 msgid "Select unit:"
-msgstr ""
+msgstr "Ƿihte ceosan:"
 
 #: src/menu_events.cpp:792
 msgid "You don’t have enough gold to recruit that unit"
@@ -3801,8 +3810,9 @@ msgid "Some units have movement left. Do you really want to end your turn?"
 msgstr ""
 
 #: src/menu_events.cpp:1459
+#, fuzzy
 msgid "Rename Unit"
-msgstr ""
+msgstr "Ƿihte Eftnaman"
 
 #: src/menu_events.cpp:1539
 msgid "Race"
@@ -4957,8 +4967,9 @@ msgid "Invalid Color"
 msgstr ""
 
 #: src/multiplayer_ui.cpp:425
+#, fuzzy
 msgid "Selected user: "
-msgstr ""
+msgstr "Gecoren brucend: "
 
 #: src/multiplayer_wait.cpp:129
 msgid "Leader: "
@@ -5081,7 +5092,7 @@ msgstr ""
 
 #: src/playcampaign.cpp:599
 msgid "Unknown scenario: '$scenario|'"
-msgstr ""
+msgstr "Uncuþ capitol: '$scenario|'"
 
 #: src/playmp_controller.cpp:92
 msgid "$name has taken control"
@@ -5259,7 +5270,7 @@ msgstr ""
 
 #: src/reports.cpp:309
 msgid "slowed: "
-msgstr "geaslæƿed: "
+msgstr "geforslæƿed: "
 
 #: src/reports.cpp:310
 msgid ""
@@ -5282,8 +5293,9 @@ msgid ""
 msgstr ""
 
 #: src/reports.cpp:317
+#, fuzzy
 msgid "petrified: "
-msgstr ""
+msgstr "forstanod: "
 
 #: src/reports.cpp:318
 msgid "This unit has been petrified. It may not move or attack."
@@ -5310,8 +5322,9 @@ msgid "Experience Modifier: "
 msgstr ""
 
 #: src/reports.cpp:493
+#, fuzzy
 msgid "Terrain: "
-msgstr ""
+msgstr "Land: "
 
 #: src/reports.cpp:511
 msgid "maximum^max."
@@ -5347,7 +5360,7 @@ msgstr "Ladscipe: "
 
 #: src/reports.cpp:614
 msgid "Slowed: "
-msgstr "Geaslæƿed: "
+msgstr "Geforslæƿed: "
 
 #: src/reports.cpp:618
 msgid "Attacks: "
@@ -5777,30 +5790,3 @@ msgstr ""
 #: src/whiteboard/manager.cpp:1157
 msgid "Whiteboard Options"
 msgstr ""
-
-#~ msgid "(Easy)"
-#~ msgstr "(Eaðe)"
-
-#~ msgid "Lord"
-#~ msgstr "Hlaford"
-
-#~ msgid "(Hard)"
-#~ msgstr "(Heard)"
-
-#~ msgid "High Lord"
-#~ msgstr "Heah Hlaford"
-
-#~ msgid "Enemies"
-#~ msgstr "Geƿinnan"
-
-#, fuzzy
-#~ msgid "B"
-#~ msgstr "B"
-
-#, fuzzy
-#~ msgid "MB"
-#~ msgstr "MB"
-
-#, fuzzy
-#~ msgid "GB"
-#~ msgstr "GB"
