Updated the Old English translation.

--- a/po/wesnoth-editor/ang@latin.po
+++ b/po/wesnoth-editor/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2011-11-30 16:06-0500\n"
+"PO-Revision-Date: 2012-05-17 11:34-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -49,8 +49,9 @@ msgstr "ƿæter"
 
 #. [editor_group]: id=flat
 #: data/core/editor/terrain-groups.cfg:23
+#, fuzzy
 msgid "flat"
-msgstr ""
+msgstr "fild"
 
 #. [editor_group]: id=desert
 #: data/core/editor/terrain-groups.cfg:30
@@ -95,7 +96,7 @@ msgstr "þorp"
 #. [editor_group]: id=castle
 #: data/core/editor/terrain-groups.cfg:86
 msgid "castle"
-msgstr ""
+msgstr "burg"
 
 #. [editor_group]: id=bridge
 #: data/core/editor/terrain-groups.cfg:93
@@ -149,13 +150,14 @@ msgstr ""
 
 #. [menu]: id=menu-editor-edit
 #: data/themes/editor.cfg:133
+#, fuzzy
 msgid "Edit"
-msgstr ""
+msgstr "Adihtan"
 
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:143
 msgid "Map"
-msgstr ""
+msgstr "Landcarte"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:153
@@ -168,8 +170,9 @@ msgid "villages"
 msgstr "þorpas"
 
 #: src/editor/editor_controller.cpp:132
+#, fuzzy
 msgid "Quit Editor"
-msgstr ""
+msgstr "Adihtend Læfan"
 
 #: src/editor/editor_controller.cpp:286
 msgid "Fatal error"
@@ -177,7 +180,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:311 src/editor/editor_controller.cpp:1098
 msgid "(New Map)"
-msgstr ""
+msgstr "(Niƿu Landcarte)"
 
 #: src/editor/editor_controller.cpp:317
 msgid "Do you really want to quit?"
