--- a/po/wesnoth-help/ang@latin.po
+++ b/po/wesnoth-help/ang@latin.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-04-06 00:43-0500\n"
-"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
+"PO-Revision-Date: 2012-05-18 19:22+1200\n"
+"Last-Translator: Zetan R S <axonfifty@gmail.comm>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
 "MIME-Version: 1.0\n"
@@ -524,6 +524,7 @@ msgstr ""
 
 #. [topic]: id=arkan_thoria
 #: data/core/encyclopedia/geography.cfg:25
+#, fuzzy
 msgid "Arkan-thoria"
 msgstr "Arcan-þoria"
 
@@ -702,8 +703,9 @@ msgstr ""
 
 #. [topic]: id=northlands
 #: data/core/encyclopedia/geography.cfg:112
+#, fuzzy
 msgid "Northlands"
-msgstr ""
+msgstr "Norðland"
 
 #. [topic]: id=northlands
 #: data/core/encyclopedia/geography.cfg:130
@@ -752,7 +754,7 @@ msgstr ""
 #. [topic]: id=southwest_elven_lands
 #: data/core/encyclopedia/geography.cfg:135
 msgid "Southwest Elven Lands"
-msgstr ""
+msgstr "Suðƿesternu Ælfisc Land"
 
 #. [topic]: id=southwest_elven_lands
 #: data/core/encyclopedia/geography.cfg:141
@@ -846,7 +848,7 @@ msgstr ""
 #. [topic]: id=..units
 #: data/core/help.cfg:31 data/core/help.cfg:84
 msgid "Units"
-msgstr ""
+msgstr "Ƿihta"
 
 #. [section]: id=abilities_section
 #. [topic]: id=..abilities_section
@@ -869,8 +871,9 @@ msgstr ""
 #. [section]: id=terrains
 #. [topic]: id=..terrains
 #: data/core/help.cfg:63 data/core/help.cfg:482
+#, fuzzy
 msgid "Terrains"
-msgstr ""
+msgstr "Land"
 
 #. [section]: id=commands
 #. [topic]: id=..commands
@@ -898,7 +901,7 @@ msgstr ""
 #. [topic]: id=.unknown_unit
 #: data/core/help.cfg:109
 msgid "Unknown Unit"
-msgstr ""
+msgstr "Uncuþ Ƿiht"
 
 #. [topic]: id=.unknown_unit
 #: data/core/help.cfg:112
@@ -967,7 +970,6 @@ msgstr ""
 
 #. [topic]: id=about_game
 #: data/core/help.cfg:143
-#, fuzzy
 msgid "About the Game"
 msgstr "Ymbe þæt Gamen"
 
@@ -1457,13 +1459,13 @@ msgstr "Foranniht"
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:276 data/core/macros/schedules.cfg:46
 msgid "First Watch"
-msgstr ""
+msgstr "Forme Ƿæcc"
 
 #. [time]: id=second_watch
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:277 data/core/macros/schedules.cfg:58
 msgid "Second Watch"
-msgstr ""
+msgstr "Oðru Ƿæcc"
 
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:279
@@ -1852,7 +1854,7 @@ msgstr ""
 #. [topic]: id=traits_undead
 #: data/core/help.cfg:414
 msgid "trait^Undead"
-msgstr ""
+msgstr "Undead"
 
 #. [topic]: id=traits_undead
 #: data/core/help.cfg:415
@@ -1896,7 +1898,7 @@ msgstr ""
 #. [topic]: id=traits_elemental
 #: data/core/help.cfg:430
 msgid "trait^Elemental"
-msgstr ""
+msgstr "Gesceaftlic"
 
 #. [topic]: id=traits_elemental
 #: data/core/help.cfg:431
@@ -1918,7 +1920,7 @@ msgstr ""
 #. [topic]: id=traits_dextrous
 #: data/core/help.cfg:438
 msgid "Dextrous"
-msgstr ""
+msgstr "Manigteaƿ"
 
 #. [topic]: id=traits_dextrous
 #: data/core/help.cfg:439
@@ -2036,8 +2038,9 @@ msgstr ""
 
 #. [topic]: id=terrain_flat
 #: data/core/help.cfg:492
+#, fuzzy
 msgid "Flat"
-msgstr ""
+msgstr "Fild"
 
 #. [topic]: id=terrain_flat
 #: data/core/help.cfg:497
@@ -2201,7 +2204,7 @@ msgstr ""
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:607
 msgid "Castle"
-msgstr ""
+msgstr "Burg"
 
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:614
@@ -2304,7 +2307,7 @@ msgstr ""
 #. [topic]: id=terrain_fungus
 #: data/core/help.cfg:679
 msgid "Mushroom Grove"
-msgstr ""
+msgstr "Sƿammgraf"
 
 #. [topic]: id=terrain_fungus
 #: data/core/help.cfg:684
@@ -2393,9 +2396,8 @@ msgstr ""
 
 #. [topic]: id=terrain_ford
 #: data/core/help.cfg:739
-#, fuzzy
 msgid "River Ford"
-msgstr "Ea Ford"
+msgstr "Eaford"
 
 #. [topic]: id=terrain_ford
 #: data/core/help.cfg:742
@@ -2822,12 +2824,12 @@ msgstr ""
 #. [illuminates]: id=illumination
 #: data/core/macros/abilities.cfg:363
 msgid "illuminates"
-msgstr "gebirhteþ"
+msgstr "gebirhtaþ"
 
 #. [illuminates]: id=illumination
 #: data/core/macros/abilities.cfg:364
 msgid "female^illuminates"
-msgstr "gebirhteþ"
+msgstr "gebirhtaþ"
 
 #. [illuminates]: id=illumination
 #: data/core/macros/abilities.cfg:368
@@ -3008,7 +3010,7 @@ msgstr ""
 #. [slow]: id=slow
 #: data/core/macros/abilities.cfg:632
 msgid "slows"
-msgstr "aslæƿeþ"
+msgstr "forslæƿeþ"
 
 #. [slow]: id=slow
 #: data/core/macros/abilities.cfg:634
@@ -3022,8 +3024,9 @@ msgstr ""
 
 #. [petrifies]: id=petrifies
 #: data/core/macros/abilities.cfg:643
+#, fuzzy
 msgid "petrifies"
-msgstr ""
+msgstr "forstanaþ"
 
 #. [petrifies]: id=petrifies
 #: data/core/macros/abilities.cfg:645
@@ -3123,32 +3126,32 @@ msgstr "Midniht"
 #. [time]: id=second_watch_hour1
 #: data/core/macros/schedules.cfg:174
 msgid "Second Watch — First Hour"
-msgstr ""
+msgstr "Oðru Ƿæcc — Forme Tid"
 
 #. [time]: id=second_watch_hour2
 #: data/core/macros/schedules.cfg:186
 msgid "Second Watch — Second Hour"
-msgstr ""
+msgstr "Oðru Ƿæcc — Oðru Tid"
 
 #. [time]: id=second_watch_hour3
 #: data/core/macros/schedules.cfg:198
 msgid "Second Watch — Third Hour"
-msgstr ""
+msgstr "Oðru Ƿæcc — Þridde Tid"
 
 #. [time]: id=second_watch_hour4
 #: data/core/macros/schedules.cfg:210
 msgid "Second Watch — Fourth Hour"
-msgstr ""
+msgstr "Oðru Ƿæcc — Feorðe Tid"
 
 #. [time]: id=second_watch_hour5
 #: data/core/macros/schedules.cfg:222
 msgid "Second Watch — Fifth Hour"
-msgstr ""
+msgstr "Oðru Ƿæcc — Fifte Tid"
 
 #. [time]: id=second_watch_hour6
 #: data/core/macros/schedules.cfg:234
 msgid "Second Watch — Sixth Hour"
-msgstr ""
+msgstr "Oðru Ƿæcc — Sixte Tid"
 
 #. [time]: id=morning_hour1
 #: data/core/macros/schedules.cfg:257
@@ -3159,7 +3162,7 @@ msgstr "Morgen — Forme Tid"
 #. [time]: id=morning_hour2
 #: data/core/macros/schedules.cfg:266
 msgid "Morning — Second Hour"
-msgstr "Morgen — Oðeru Tid"
+msgstr "Morgen — Oðru Tid"
 
 #. [time]: id=morning_hour3
 #: data/core/macros/schedules.cfg:275
@@ -3184,7 +3187,7 @@ msgstr "Ofernon — Forme Tid"
 #. [time]: id=afternoon_hour2
 #: data/core/macros/schedules.cfg:311
 msgid "Afternoon — Second Hour"
-msgstr "Ofernon — Oðeru Tid"
+msgstr "Ofernon — Oðru Tid"
 
 #. [time]: id=afternoon_hour3
 #: data/core/macros/schedules.cfg:320
@@ -3209,22 +3212,22 @@ msgstr "Ofernon — Sixte Tid"
 #. [time]: id=first_watch_hour1
 #: data/core/macros/schedules.cfg:369
 msgid "First Watch — First Hour"
-msgstr ""
+msgstr "Forme Ƿæcc — Forme Tid"
 
 #. [time]: id=first_watch_hour2
 #: data/core/macros/schedules.cfg:381
 msgid "First Watch — Second Hour"
-msgstr ""
+msgstr "Forme Ƿæcc — Oðru Tid"
 
 #. [time]: id=first_watch_hour3
 #: data/core/macros/schedules.cfg:393
 msgid "First Watch — Third Hour"
-msgstr ""
+msgstr "Forme Ƿæcc — Þridde Tid"
 
 #. [time]: id=first_watch_hour4
 #: data/core/macros/schedules.cfg:405
 msgid "First Watch — Fourth Hour"
-msgstr ""
+msgstr "Forme Ƿæcc — Feorðe Tid"
 
 #: data/core/macros/special-notes.cfg:5
 msgid ""
@@ -3415,12 +3418,12 @@ msgstr ""
 #. [trait]: id=undead
 #: data/core/macros/traits.cfg:22
 msgid "undead"
-msgstr ""
+msgstr "undead"
 
 #. [trait]: id=undead
 #: data/core/macros/traits.cfg:23
 msgid "female^undead"
-msgstr ""
+msgstr "undead"
 
 #. [trait]: id=undead
 #. [trait]: id=mechanical
@@ -3443,12 +3446,12 @@ msgstr ""
 #. [trait]: id=elemental
 #: data/core/macros/traits.cfg:52
 msgid "elemental"
-msgstr ""
+msgstr "gesceaftlic"
 
 #. [trait]: id=elemental
 #: data/core/macros/traits.cfg:53
 msgid "female^elemental"
-msgstr ""
+msgstr "gesceaftlic"
 
 #. [trait]: id=strong
 #: data/core/macros/traits.cfg:66
@@ -3463,12 +3466,13 @@ msgstr "strang"
 #. [trait]: id=dextrous
 #: data/core/macros/traits.cfg:84
 msgid "dextrous"
-msgstr ""
+msgstr "manigteaƿ"
 
 #. [trait]: id=dextrous
 #: data/core/macros/traits.cfg:85
+#, fuzzy
 msgid "female^dextrous"
-msgstr ""
+msgstr "manigteaƿ"
 
 #. [trait]: id=quick
 #: data/core/macros/traits.cfg:98
@@ -3523,7 +3527,7 @@ msgstr "egeleas"
 #. [trait]: id=fearless
 #: data/core/macros/traits.cfg:166 data/core/macros/traits.cfg:179
 msgid "female^fearless"
-msgstr "egeleasu"
+msgstr "egeleas"
 
 #. [trait]: id=fearless
 #: data/core/macros/traits.cfg:167 data/core/macros/traits.cfg:180
@@ -4104,17 +4108,17 @@ msgstr ""
 #. [race]: id=orc
 #: data/core/units.cfg:252
 msgid "race^Orc"
-msgstr ""
+msgstr "Orcƿiht"
 
 #. [race]: id=orc
 #: data/core/units.cfg:253
 msgid "race+female^Orc"
-msgstr ""
+msgstr "Orcƿiht"
 
 #. [race]: id=orc
 #: data/core/units.cfg:254
 msgid "race^Orcs"
-msgstr ""
+msgstr "Orcƿihta"
 
 #. [race]: id=orc
 #: data/core/units.cfg:264
@@ -4233,17 +4237,17 @@ msgstr ""
 #. [race]: id=undead
 #: data/core/units.cfg:294
 msgid "race^Undead"
-msgstr ""
+msgstr "Undead"
 
 #. [race]: id=undead
 #: data/core/units.cfg:295
 msgid "race+female^Undead"
-msgstr ""
+msgstr "Undead"
 
 #. [race]: id=undead
 #: data/core/units.cfg:296
 msgid "race+plural^Undead"
-msgstr ""
+msgstr "Undeade"
 
 #. [race]: id=undead
 #: data/core/units.cfg:302
@@ -4346,7 +4350,7 @@ msgstr ""
 
 #: src/help.cpp:1405 src/help.cpp:1721 src/help.cpp:1782
 msgid "race^Miscellaneous"
-msgstr ""
+msgstr "Missenlic"
 
 #: src/help.cpp:1407
 msgid "Race: "
@@ -4370,7 +4374,7 @@ msgstr ""
 
 #: src/help.cpp:1449
 msgid "Cost: "
-msgstr ""
+msgstr "Ƿeorþ: "
 
 #: src/help.cpp:1450
 msgid "Alignment: "
@@ -4421,8 +4425,9 @@ msgid "Terrain Modifiers"
 msgstr ""
 
 #: src/help.cpp:1574
+#, fuzzy
 msgid "Terrain"
-msgstr ""
+msgstr "Land"
 
 #: src/help.cpp:1575
 msgid "Defense"
@@ -4434,7 +4439,7 @@ msgstr ""
 
 #: src/help.cpp:1788
 msgid "<header>text='Units of this race'</header>"
-msgstr ""
+msgstr "<header>text='Þisses cynnes ƿihta'</header>"
 
 #: src/help.cpp:2701
 msgid " < Back"
@@ -4453,8 +4458,9 @@ msgid "corrupted original file"
 msgstr ""
 
 #: src/help.cpp:3157
+#, fuzzy
 msgid "Close"
-msgstr ""
+msgstr "Tynan"
 
 #: src/help.cpp:3160
 msgid "The Battle for Wesnoth Help"
@@ -4475,6 +4481,3 @@ msgstr ""
 
 #~ msgid "race^Falcons"
 #~ msgstr "Fealcan"
-
-#~ msgid " "
-#~ msgstr " "
