--- a/po/wesnoth-manual/ang@latin.po
+++ b/po/wesnoth-manual/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-03-31 23:11-0500\n"
+"PO-Revision-Date: 2012-05-17 09:20-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -206,7 +206,7 @@ msgstr ""
 #: /src/wesnoth/doc/manual/manual.en.xml:2329
 #: /src/wesnoth/doc/manual/manual.en.xml:2345
 msgid "<placeholder type=\"inlinemediaobject\" id=\"0\"/>"
-msgstr ""
+msgstr "<placeholder type=\"inlinemediaobject\" id=\"0\"/>"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:98
@@ -292,8 +292,9 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:177
+#, fuzzy
 msgid "Map Editor"
-msgstr ""
+msgstr "Landcartan Adihtend"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:181
@@ -364,7 +365,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:245
 msgid "Next"
-msgstr ""
+msgstr "Niehst"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:249
@@ -1184,7 +1185,7 @@ msgstr "Ctrl+n"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:865
 msgid "Rename unit"
-msgstr ""
+msgstr "Ƿihta eftnemnan"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:870
@@ -1291,9 +1292,8 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:968
-#, fuzzy
 msgid "Shift+Space"
-msgstr "Shift+c"
+msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:971
@@ -1302,9 +1302,8 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:976
-#, fuzzy
 msgid "Ctrl+Space"
-msgstr "Ctrl+e"
+msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:979
@@ -1717,7 +1716,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1361
 msgid "Units"
-msgstr ""
+msgstr "Ƿihta"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1362
@@ -1817,11 +1816,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-dawn.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-dawn.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1427
 msgid "images/schedule-dawn.png"
-msgstr ""
+msgstr "images/schedule-dawn.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1431
@@ -1851,11 +1852,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-morning.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-morning.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1452
 msgid "images/schedule-morning.png"
-msgstr ""
+msgstr "images/schedule-morning.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1456
@@ -1898,11 +1901,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-afternoon.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-afternoon.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1477
 msgid "images/schedule-afternoon.png"
-msgstr ""
+msgstr "images/schedule-afternoon.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1481
@@ -1923,11 +1928,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-dusk.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-dusk.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1502
 msgid "images/schedule-dusk.png"
-msgstr ""
+msgstr "images/schedule-dusk.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1506
@@ -1947,16 +1954,18 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-firstwatch.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-firstwatch.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1527
 msgid "images/schedule-firstwatch.png"
-msgstr ""
+msgstr "images/schedule-firstwatch.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1531
 msgid "Night (first watch)"
-msgstr ""
+msgstr "Niht (forme ƿæcc)"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1545
@@ -1971,16 +1980,18 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-secondwatch.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-secondwatch.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1552
 msgid "images/schedule-secondwatch.png"
-msgstr ""
+msgstr "images/schedule-secondwatch.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1556
 msgid "Night (second watch)"
-msgstr ""
+msgstr "Niht (oðru ƿæcc)"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1570
@@ -1993,11 +2004,13 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/schedule-underground.png\"/> </"
 "imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/schedule-underground.png\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:1577
 msgid "images/schedule-underground.png"
-msgstr ""
+msgstr "images/schedule-underground.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1581
@@ -2123,7 +2136,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:1682
 msgid "Dextrous"
-msgstr ""
+msgstr "Manigteaƿ"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1686
@@ -2190,7 +2203,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:1743
 msgid "Undead"
-msgstr ""
+msgstr "Undead"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1747
@@ -2354,7 +2367,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:1889
 msgid "Petrify"
-msgstr ""
+msgstr "Forstanian"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1893
@@ -2751,6 +2764,7 @@ msgstr "Grene"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2285
@@ -2773,6 +2787,7 @@ msgstr "Geolu"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2301
@@ -2797,6 +2812,7 @@ msgstr "Read"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2317
@@ -2821,6 +2837,7 @@ msgstr "Blaƿ"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2333
@@ -2837,6 +2854,7 @@ msgstr ""
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </imageobject>"
 msgstr ""
+"<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2349
@@ -3668,78 +3686,3 @@ msgid ""
 "Advanced units have higher upkeep than lower level units (1 gp per level), "
 "loyal units are an exception."
 msgstr ""
-
-#~ msgid "Ctrl-s"
-#~ msgstr "Ctrl-s"
-
-#~ msgid "Ctrl-o"
-#~ msgstr "Ctrl-o"
-
-#~ msgid "Ctrl-p"
-#~ msgstr "Ctrl-p"
-
-#~ msgid "Ctrl-q"
-#~ msgstr "Ctrl-q"
-
-#~ msgid "Ctrl-f"
-#~ msgstr "Ctrl-f"
-
-#~ msgid "Ctrl-g"
-#~ msgstr "Ctrl-g"
-
-#~ msgid "Ctrl-a"
-#~ msgstr "Ctrl-a"
-
-#~ msgid "Ctrl-j"
-#~ msgstr "Ctrl-j"
-
-#~ msgid "Alt-s"
-#~ msgstr "Alt-s"
-
-#~ msgid "Alt-u"
-#~ msgstr "Alt-u"
-
-#~ msgid "Shift-s"
-#~ msgstr "Shift-s"
-
-#~ msgid "Ctrl-r"
-#~ msgstr "Ctrl-r"
-
-#~ msgid "Alt-r"
-#~ msgstr "Alt-r"
-
-#~ msgid "Ctrl-n"
-#~ msgstr "Ctrl-n"
-
-#~ msgid "Shift-n"
-#~ msgstr "Shift-n"
-
-#~ msgid "Ctrl-v"
-#~ msgstr "Ctrl-v"
-
-#~ msgid "Ctrl-b"
-#~ msgstr "Ctrl-b"
-
-#~ msgid "Ctrl-m"
-#~ msgstr "Ctrl-m"
-
-#~ msgid "Alt-m"
-#~ msgstr "Alt-m"
-
-#~ msgid "Alt-c"
-#~ msgstr "Alt-c"
-
-#~ msgid "Ctrl-c"
-#~ msgstr "Ctrl-c"
-
-#~ msgid "Alt-l"
-#~ msgstr "Alt-l"
-
-#~ msgid "Ctrl-l"
-#~ msgstr "Ctrl-l"
-
-#~ msgid "Cmd-w"
-#~ msgstr "Cmd-w"
-
-#~ msgid "Cmd-,"
-#~ msgstr "Cmd-,"
